--- a/src/Components/Reviews.css
+++ b/src/Components/Reviews.css
@@ -1,14 +1,17 @@
 ul {
 	list-style: none;
+	margin: 0px 0px 0px;
+	padding: 0px 10px 0px 10px;
 }
 
-.card-img {
+.img-container {
+	max-width: 470px;
+	max-height: 249px;
+	overflow: hidden;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	max-width: 50%;
-	max-height: 50%;
-	object-fit: contain;
+	object-fit: cover;
 }
 
 .card {
@@ -16,8 +19,4 @@ ul {
 	padding: 15px;
 	border-radius: 15px;
 	box-shadow: 3px -1px 8px -4px #000000;
-}
-
-.card-img-top {
-	border-radius: 10px;
 }
