--- a/src/Components/Reviews.css
+++ b/src/Components/Reviews.css
@@ -1,7 +1,7 @@
 ul {
 	list-style: none;
 	margin: 0px 0px 0px;
-	padding: 0px 10px 0px 10px;
+	padding: 0px 20px 0px 20px;
 }
 
 .img-container {
@@ -19,4 +19,18 @@ ul {
 	padding: 15px;
 	border-radius: 15px;
 	box-shadow: 3px -1px 8px -4px #000000;
+}
+
+.home {
+	margin-right: 15px;
+}
+
+.form {
+	margin: 0;
+	margin-top: 7px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-right: -50%;
+	transform: translate(-50%, -50%);
 }
