--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,5 +1,12 @@
 .carousel-item {
 	max-height: 25vh;
+	overflow: hidden;
+	object-fit: cover;
+}
+
+.d-block.w-100 {
+	max-width: 1100px;
+	max-height: 400px;
 }
 
 .header-title {
