moved categories and started create revie page

--- a/src/Components/Users/Users.css
+++ b/src/Components/Users/Users.css
@@ -1,9 +1,9 @@
 .login-form {
-	margin-left: 150px !important;
-	margin-right: 150px !important;
+	margin-left: 10% !important;
+	margin-right: 10% !important;
 }
 
 .inner-form {
-	margin-left: 150px !important;
-	margin-right: 150px !important;
+	margin-left: 25% !important;
+	margin-right: 25% !important;
 }
