added post comment page refresh behaviour

--- a/src/Components/NavigationBar/NavigationBar.css
+++ b/src/Components/NavigationBar/NavigationBar.css
@@ -7,9 +7,8 @@
 	width: 100vw;
 }
 
-.users {
-	margin-left: 10px;
-	margin-right: 10px;
+.create-review {
+	margin-right: 15px;
 }
 
 .input-group-text {
